# app/handler/authentication.go
@@ -4,13 +4,13 @@ import (
 	"encoding/json"
 	"net/http"
 
+	"github.com/42milez/go-oidc-server/app/model"
+
 	"github.com/42milez/go-oidc-server/app/auth"
 	"github.com/42milez/go-oidc-server/app/ent/ent"
 	"github.com/42milez/go-oidc-server/app/entity"
 	"github.com/42milez/go-oidc-server/app/repository"
 	"github.com/42milez/go-oidc-server/app/service"
-	"github.com/42milez/go-oidc-server/app/session"
-
 	"github.com/42milez/go-oidc-server/pkg/xutil"
 
 	"github.com/rs/zerolog/log"
@@ -20,7 +20,7 @@ import (
 	"github.com/go-playground/validator/v10"
 )
 
-func NewAuthenticate(entClient *ent.Client, cookieUtil *Cookie, sessionUtil *session.Session, jwtUtil *auth.Util) (*Authenticate, error) {
+func NewAuthenticate(entClient *ent.Client, cookieUtil *Cookie, sessionUtil *Session, jwtUtil *auth.Util) (*Authenticate, error) {
 	return &Authenticate{
 		service: &service.Authenticate{
 			Repo: &repository.User{
@@ -42,7 +42,7 @@ type Authenticate struct {
 	validator *validator.Validate
 }
 
-const cookieNameSessionID = "sid"
+const sessionIDCookieName = "sid"
 
 // ServeHTTP authenticates a user
 //
@@ -52,11 +52,11 @@ const cookieNameSessionID = "sid"
 //	@tags			authentication
 //	@accept			json
 //	@produce		json
-//	@param			name		body		string	true	"TBD"
-//	@param			password	body		string	true	"TBD"
-//	@success		200			{object}	model.Authenticate
-//	@failure		500			{object}	model.BadRequest
-//	@failure		500			{object}	model.InternalServerError
+//	@param			name		body		string	true	"Username"
+//	@param			password	body		string	true	"Password"
+//	@success		200			{object}	model.AuthenticateResponse
+//	@failure		500			{object}	model.ErrorResponse
+//	@failure		500			{object}	model.ErrorResponse
 //	@router			/v1/authenticate [post]
 func (p *Authenticate) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 	var body struct {
@@ -66,7 +66,7 @@ func (p *Authenticate) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 
 	if err := json.NewDecoder(r.Body).Decode(&body); err != nil {
 		log.Error().Err(err).Msg(errFailedToDecodeRequestBody)
-		ResponseJSONWithInternalServerError(w)
+		ResponseJsonWithInternalServerError(w)
 		return
 	}
 
@@ -81,7 +81,7 @@ func (p *Authenticate) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 	userID, err := p.service.Authenticate(r.Context(), body.Name, body.Password)
 
 	if err != nil {
-		ResponseJSONWithInternalServerError(w)
+		ResponseJsonWithInternalServerError(w)
 		return
 	}
 
@@ -90,22 +90,19 @@ func (p *Authenticate) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 	})
 
 	if err != nil {
-		ResponseJSONWithInternalServerError(w)
+		ResponseJsonWithInternalServerError(w)
 		return
 	}
 
-	if err = p.cookie.Set(w, cookieNameSessionID, sessionID); err != nil {
-		ResponseJSONWithInternalServerError(w)
+	if err = p.cookie.Set(w, sessionIDCookieName, sessionID); err != nil {
+		ResponseJsonWithInternalServerError(w)
 		return
 	}
 
 	// TODO: Redirect to consent url
 	// ...
 
-	resp := struct {
-		Error string `json:"error"`
-	}{
-		Error: "",
-	}
-	RespondJSON(w, http.StatusOK, resp)
+	RespondJSON(w, http.StatusOK, &model.AuthenticateResponse{
+		Error: xerr.OK.Error(),
+	})
 }
